--- a/ch1-sapflow/document.tex
+++ b/ch1-sapflow/document.tex
@@ -1,7 +1,7 @@
-\chapter{Species differences in the seasonality of evergreen tree transpiration in a Mediterranean climate}
+\chapter[Species differences in the seasonality of evergreen tree transpiration in a Mediterranean climate]{Species differences in the seasonality of evergreen tree transpiration in a Mediterranean climate\footnotemark{}\footnotetext{Previously published as: Link, P., Simonin, K., Maness, H., Oshun, J., Dawson, T., and Fung, I. (2014). Species differences in the seasonality of evergreen tree transpiration in a Mediterranean climate: Analysis of multiyear, half-hourly sap flow observations. \textit{Water Resources Research}, \textit{50}(3), 1869-1894.}}
 \label{c.sapflow}
 
-In Mediterranean climates, the season of water availability (winter) is out of phase with the season of light availability and atmospheric moisture demand (summer).  We investigate the seasonality of evergreen tree transpiration in a Mediterranean climate, using observations from a small (4000 m$^2$), forested, steep (32$^{\circ}$) hillslope, in the northern California Coast Range.  We analyze three years of high-cadence measurements from 39 sap flow sensors in 26 trees, six depth profiles of soil moisture measured by TDR, and spatially distributed measurements of micrometeorology from five locations.  The sap flow measurements show that two common evergreen tree species have different seasons of peak transpiration.  Douglas-firs (\textit{Pseudotsuga menziesii}) maintain significant transpiration through the winter rainy season and transpire maximally in the spring, followed by a sharp decline in transpiration in the summer dry season.  Pacific madrones (\textit{Arbutus menziesii}), and to a lesser extent other broadleaf evergreen species (\textit{Quercus wislizeni}, \textit{Notholithocarpus densiflorus}, \textit{Umbellularia californica}), in contrast, transpire maximally in the summer dry season. The seasonal patterns are quantified using principal component analysis.  Markov chain Monte Carlo estimation of response to environmental variables shows that the difference in transpiration seasonality arises from different sensitivities to atmospheric evaporative demand and root-zone moisture.  The different sensitivities to atmospheric evaporative demand also create species differences in transpiration variability at synoptic timescales.  Using the sap flow measurements and a regional forest inventory, a bottom-up regional transpiration estimate is constructed.  The estimate suggests that sensitivity of Douglas-fir transpiration to water stress suppresses dry season evapotranspiration at the regional scale. 
+\textbf{Abstract:}  In Mediterranean climates, the season of water availability (winter) is out of phase with the season of light availability and atmospheric moisture demand (summer).  We investigate the seasonality of evergreen tree transpiration in a Mediterranean climate, using observations from a small (4000 m$^2$), forested, steep (32$^{\circ}$) hillslope, in the northern California Coast Range.  We analyze three years of high-cadence measurements from 39 sap flow sensors in 26 trees, six depth profiles of soil moisture measured by time-domain reflectometry (TDR), and spatially distributed measurements of micrometeorology from five locations.  The sap flow measurements show that two common evergreen tree species have different seasons of peak transpiration.  Douglas-firs (\textit{Pseudotsuga menziesii}) maintain significant transpiration through the winter rainy season and transpire maximally in the spring, followed by a sharp decline in transpiration in the summer dry season.  Pacific madrones (\textit{Arbutus menziesii}), and to a lesser extent other broadleaf evergreen species (\textit{Quercus wislizeni}, \textit{Notholithocarpus densiflorus}, \textit{Umbellularia californica}), in contrast, transpire maximally in the summer dry season. The seasonal patterns are quantified using principal component analysis.  Markov chain Monte Carlo estimation of response to environmental variables shows that the difference in transpiration seasonality arises from different sensitivities to atmospheric evaporative demand and root-zone moisture.  The different sensitivities to atmospheric evaporative demand also create species differences in transpiration variability at synoptic timescales.  Using the sap flow measurements and a regional forest inventory, a bottom-up regional transpiration estimate is constructed.  The estimate suggests that sensitivity of Douglas-fir transpiration to water stress suppresses dry season evapotranspiration at the regional scale. 
 
 \input{ch1-sapflow/intro/intro.tex}
 
@@ -12,12 +12,6 @@ In Mediterranean climates, the season of water availability (winter) is out of p
 \input{ch1-sapflow/discussion/discussion.tex}
 
 \input{ch1-sapflow/conclusions/conclusions.tex}
-
-\section*{Acknowledgments}
-
-COAUTHORS; and mention WRR publication here?
-
-We thank Daniella Rempe, William Dietrich, and Collin Bode for helpful comments and discussion.  The W. M. Keck Foundation provided support for the instruments used in this study.  Percy Link was supported by DOE grant DE-SC0001470 and NSF grant ATM-0628678.  Jasper Oshun was supported by NSF CMG Collaborative Research grant 0934818.
 
 \input{ch1-sapflow/appendix/appendix.tex}
 
