--- a/ch1-sapflow/methods/methods.tex
+++ b/ch1-sapflow/methods/methods.tex
@@ -3,8 +3,8 @@
 \label{sec:sapflow_sitedesc}
 
 \begin{figure}[here]
-\includegraphics[width=0.9\textwidth]{ch1-sapflow/figures/Figure01.pdf}
-\caption{Site map, showing topography, weather stations (R1, R2, R3, TB, AM), TDR profiles, and trees instrumented with sap flow sensors.  Symbols for instrumented trees are scaled by the tree diameter.  Tree numbers correspond with those in Table \ref{tbl:tree_props}.  Light gray numbers show elevation above sea level, in m.  Large inset: regional topography near the Angelo Coast Range Reserve (white star) [\textit{GLOBE Task Team et al.}, 1999 XXXX].  Small inset: California, with gray box outlining the region displayed in the large inset, and red dot showing San Francisco.}
+\includegraphics[width=0.7\textwidth]{ch1-sapflow/figures/Figure01.pdf}
+\caption{Site map, showing topography, weather stations (R1, R2, R3, TB, AM), TDR profiles, and trees instrumented with sap flow sensors.  Symbols for instrumented trees are scaled by the tree diameter.  Tree numbers correspond with those in Table \ref{tbl:tree_props}.  Light gray numbers show elevation above sea level, in m.  Large inset: regional topography near the Angelo Coast Range Reserve (white star) [\cite{globe}].  Small inset: California, with gray box outlining the region displayed in the large inset, and red dot showing San Francisco.}
 \label{fig:sapflow_map}
 \end{figure}
 
@@ -24,9 +24,9 @@ Volumetric $\theta$ measurements are filtered to exclude values outside the sens
 Sap velocity, the velocity of water through the xylem parallel to the axis of the tree trunk, is measured in 26 trees using 39 heat ratio method sensors (ICT International, Armidale, Australia; \cite{burgess2001improved}) installed 1 m above the ground in the tree trunks.  The tree locations, species, and diameters at breast height are shown in Figure \ref{fig:sapflow_map}, with the symbol size scaled by tree diameter, and the properties of each sensor are listed in Table \ref{tbl:tree_props}.  The trees were chosen to represent the distribution of tree species and sizes on the hillslope, within the constraints of accessibility on the steep slope and a limited number of sensors.  Multiple trees were instrumented for each species except tanoak (1 tree), which was sparse on this hillslope (uncharacteristically for this region.)  Before installing the sensors, bark was removed to the cambium from an approximately 5 cm x 5 cm area.  Each sensor measures the velocity of a heat pulse emitted by the sensor at two radial depths in the xylem: 12.5 mm and 27.5 mm.  These depths are not precise because of minor errors in sensor placement; errors in probe spacing are corrected using the procedure in \cite{burgess2001improved}.  For this procedure, we assume zero flow at times when water stress is expected to be minimal: pre-dawn (within 3 hours before sunrise), high relative humidity (between 92 and 95\%), no solar radiation, no daily rain, and between January and March.  Sensors were moved in late 2010 to minimize wounding, creating two stages of deployment (2009-2010, and 2011.)  Because we did not measure wound diameters around the probes (as that would be destructive), we assume a wound diameter of 0.2 mm (a central value from Table 1 in \cite{burgess2001improved}) for all sensors; the wound correction is a linear factor and is thus removed by the normalization described below (Section \ref{sec:normalization}).  Heat pulse velocity was recorded on ICT SL5 Smart Loggers (ICT International, Armidale, Australia) at 30-minute intervals.
 
 \begin{table}
-  \caption{Sap flow sensor properties, including tree, sensor ID, stage of deployment, species, DBH (diameter at breast height), nearest weather station, active depth (radial sensor position with larger sap velocity), 99.5th percentile instantaneous sap velocity for each sensor position, 12.5 mm - 27.5 mm sensor correlation ($R^2$ coefficient comparing velocities at the two measured radial positions), 99.5th percentile daily integral sap velocity for the active sensor depth, lag time of sap velocity relative to radiation, lag time of sap velocity relative to VPD, wood dry density at the two sensor positions, and wood water content at the two sensor positions.}
+  \caption{Sap flow sensor properties, including tree, sensor ID, stage of deployment, species, DBH (diameter at breast height), nearest weather station, active depth (radial sensor position with larger sap velocity), 99.5th percentile instantaneous sap velocity for each sensor position, 12.5 mm - 27.5 mm sensor correlation ($R^2$ coefficient comparing velocities at the two measured radial positions), 99.5th percentile daily integral sap velocity for the active sensor depth, lag time of sap velocity relative to radiation, lag time of sap velocity relative to $VPD$, wood dry density at the two sensor positions, and wood water content at the two sensor positions.}
   \label{tbl:tree_props}
-  \includegraphics[width=\linewidth]{ch1-sapflow/tables/Table1.pdf}
+  \includegraphics[width=\linewidth]{ch1-sapflow/tables/Table1_cropped.pdf}
 \end{table}
 
 Wood density and water content were measured by taking cores with an increment borer in October 2010 and October 2012, and these properties are used to convert heat pulse velocity to sap velocity [\cite{burgess2001improved}].  For several sensors, wood density and water content were not measured (Table \ref{tbl:tree_props}); for these sensors, the species-averaged values were used.  Because water content was only measured once at the end of each stage, we used a constant value throughout the year.  Uncertainties associated with this assumption are discussed in Section \ref{sec:sapflow_soilmoisture}.
@@ -161,7 +161,7 @@ Transpiration is scaled from a single tree to the regional scale using distribut
 
 \begin{figure}[here]
 \includegraphics[width=0.9\textwidth]{ch1-sapflow/figures/Figure02.pdf}
-\caption{Counts of trees per km$^2$ in major species categories, binned diameter; from FIA plots in the Eel River watershed [\textit{Woudenberg et al.}, 2010 XXXX].  The category ``other conifer'' includes knobcone pine, Jeffrey pine, sugar pine, Western white pine, bishop pine, ponderosa pine, California foothill pine, white fir, grand fir, red fir, Pacific yew, western hemlock, incense cedar, and Sitka spruce.  The category ``other oak'' includes California live oak, canyon live oak, blue oak, Oregon white oak, California black oak, and California white oak.  The category ``other broadleaf'' includes bigleaf maple, California buckeye, red alder, white alder, giant chinkapin, and bitter cherry.}
+\caption{Counts of trees per km$^2$ in major species categories, binned diameter; from FIA plots in the Eel River watershed [\cite{woudenberg2010forest}].  The category ``other conifer'' includes knobcone pine, Jeffrey pine, sugar pine, Western white pine, bishop pine, ponderosa pine, California foothill pine, white fir, grand fir, red fir, Pacific yew, western hemlock, incense cedar, and Sitka spruce.  The category ``other oak'' includes California live oak, canyon live oak, blue oak, Oregon white oak, California black oak, and California white oak.  The category ``other broadleaf'' includes bigleaf maple, California buckeye, red alder, white alder, giant chinkapin, and bitter cherry.}
 \label{fig:sapflow_abundances}
 \end{figure}
 
