--- a/ch1-sapflow/results/results.tex
+++ b/ch1-sapflow/results/results.tex
@@ -8,7 +8,7 @@
 \label{fig:sapflow_met}
 \end{figure}
 
-The ACRR has a Mediterranean climate with a marked winter wet season and summer dry season.  The wet season at the ACRR extends from approximately October through April (90\% of the annual precipitation fell in these months in 2009-2011), and very little rain falls during July through September (less than 1\% in 2009-2011; Figure \ref{fig:sapflow_met}(a)).  Clear sky \textit{I} is maximum in late June (summer solstice) and minimum in late December (winter solstice), and \textit{I} can be reduced by 50 to 90\% on cloudy days.  The annual cycle of \textit{T} lags behind that of \textit{I}, with a peak in July and August and a minimum in January or February. The mean July-September \textit{T} for 2009-2011 was 18$^{\circ}$C, and the mean December-February \textit{T} was 5$^{\circ}$C (weather station R3).  The annual cycle of \textit{VPD} follows that of \textit{T} and also peaks in July or August.  \textit{T} and \textit{RH} vary somewhat along the hillslope: on clear days, the air is warmer and drier in the upper canopy and upslope, and the air is cooler and more humid downslope (up to 10$^{\circ}$C cooler at downslope ground level than in the canopy at midday in winter; Figure \ref{fig:sapflow_met}(b) and (c)).  Mean annual \textit{P} in the vicinity of the ACRR (National Climatic Data Center GHCN precipitation station USC00048490, 18 km NNE of the ACRR; data from 1960-2000; XXXX \textit{Williams et al.} [2012]) is 1800 mm, with significant interannual variability (standard deviation of 500 mm); on average, 3\% ($\pm$3\% standard deviation) of annual precipitation falls in July through September.  During the study period, precipitation at Rivendell ranged between a minimum of 1500 mm in water year 2008-2009 and a maximum of 2100 mm in water year 2010-2011.
+The ACRR has a Mediterranean climate with a marked winter wet season and summer dry season.  The wet season at the ACRR extends from approximately October through April (90\% of the annual precipitation fell in these months in 2009-2011), and very little rain falls during July through September (less than 1\% in 2009-2011; Figure \ref{fig:sapflow_met}(a)).  Clear sky \textit{I} is maximum in late June (summer solstice) and minimum in late December (winter solstice), and \textit{I} can be reduced by 50 to 90\% on cloudy days.  The annual cycle of \textit{T} lags behind that of \textit{I}, with a peak in July and August and a minimum in January or February. The mean July-September \textit{T} for 2009-2011 was 18$^{\circ}$C, and the mean December-February \textit{T} was 5$^{\circ}$C (weather station R3).  The annual cycle of \textit{VPD} follows that of \textit{T} and also peaks in July or August.  \textit{T} and \textit{RH} vary somewhat along the hillslope: on clear days, the air is warmer and drier in the upper canopy and upslope, and the air is cooler and more humid downslope (up to 10$^{\circ}$C cooler at downslope ground level than in the canopy at midday in winter; Figure \ref{fig:sapflow_met}(b) and (c)).  Mean annual \textit{P} in the vicinity of the ACRR (National Climatic Data Center GHCN precipitation station USC00048490, 18 km NNE of the ACRR; data from 1960-2000; \cite{williams2012modifications}) is 1800 mm, with significant interannual variability (standard deviation of 500 mm); on average, 3\% ($\pm$3\% standard deviation) of annual precipitation falls in July through September.  During the study period, precipitation at Rivendell ranged between a minimum of 1500 mm in water year 2008-2009 and a maximum of 2100 mm in water year 2010-2011.
 
 Water storage below ground is also highly seasonal. The water table, measured by 12 on-site wells, remains near 5 m below ground throughout the year at downslope wells, but upslope it ranges from $\sim$10 m below ground in the wet season to $\sim$20 m below ground in the dry season.   Soil moisture ($\theta$) is high and dynamic during the winter rainy season but dries to fairly steady and very low values during the summer dry season (Figure \ref{fig:sapflow_met}(d); \cite{salve2012rain}).  
 
@@ -71,9 +71,10 @@ The response of sap velocity to \textit{I} is captured by the slope $\gamma$, wh
 The Jarvis model parameters for all trees, separated by species, are shown in Figure \ref{fig:sapflow_params} and summarized in Table \ref{tbl:sapflow_mcmc}.  For 25 of the 26 trees, the posterior distributions of all five parameters are sharply peaked and well within the initial uniform prior chosen (example posterior distributions are shown in Figure \ref{fig:sapflow_posterior}).  One Pacific madrone tree (tree 16) has a broader distribution for $\beta$ than other trees (see 95\% HPD interval in Table \ref{tbl:sapflow_mcmc}.)
 
 \begin{table}
-  \caption{Median values of estimated Jarvis parameter distributions for each tree, with uncertainties calculated from the 95\% HPD interval.}
+  \caption{Median values of estimated Jarvis parameter distributions for each tree, with uncertainties calculated from the 
+95\% HPD interval.}
   \label{tbl:sapflow_mcmc}
-  \includegraphics[width=\linewidth]{ch1-sapflow/tables/TableA2}
+  \includegraphics[width=\linewidth]{ch1-sapflow/tables/TableA2_cropped.pdf}
 \end{table}
 
 \begin{figure}[here]
@@ -110,7 +111,7 @@ In the rainy winter, in contrast, \textit{VPD} varies around a much lower season
 
 \begin{figure}[here]
 \includegraphics[width=0.9\textwidth]{ch1-sapflow/figures/Figure09.pdf}
-\caption{Timing of dry season decline of Douglas-fir trees in each observation year. Each blue dot represents the date of decline below 50\% of a Douglas-fir treeÕs maximum daily integral, using only high VPD days (R3 daily max $>$2.5 kPa, linearly interpolating across gaps). The box diagram for each year shows the quartiles of the distribution of all Douglas-fir sensors, with the red line indicating the median. The yellow triangles show the date that site-averaged relative $\theta$ declined below 0.27.}
+\caption{Timing of dry season decline of Douglas-fir trees in each observation year. Each blue dot represents the date of decline below 50\% of a Douglas-fir tree's maximum daily integral, using only high VPD days (R3 daily max $>$2.5 kPa, linearly interpolating across gaps). The box diagram for each year shows the quartiles of the distribution of all Douglas-fir sensors, with the red line indicating the median. The yellow triangles show the date that site-averaged relative $\theta$ declined below 0.27.}
 \label{fig:sapflow_interannual}
 \end{figure}
 
