--- a/ch2-BL/document.tex
+++ b/ch2-BL/document.tex
@@ -1,7 +1,8 @@
-\chapter{Regional-scale forest conversion from Douglas fir to Pacific madrone cools and moistens the atmospheric boundary layer}
+\chapter{Effect of regional-scale forest species conversion on the atmospheric boundary layer in the Northern California Coast Range}
 \label{c.BL}
 
-Abstract.
+\textbf{Abstract:}  Common evergreen tree species in Northern California respond to summer drought with different water use strategies.  In this study, the effect of these different water use patterns on the atmospheric boundary layer is estimated, using two atmospheric models, one simple and one comprehensive.  Two tree species with very different water use strategies are tested, in order to quantify the maximum impact of species distribution on the dry season atmosphere, using extreme regional-scale scenarios of complete forest species conversion from 100\% Douglas fir (\textit{Pseudotsuga menziesii}) to 100\% Pacific madrone (\textit{Arbutus menziesii}).  For representative mid-summer periods, atmospheric boundary layer conditions (temperature, humidity, and boundary layer depth) are compared between a model land surface with Douglas fir stomatal response parameters versus one with Pacific madrone stomatal response parameters.  For both species cases, soil moisture is varied from dry to wet and free-tropospheric conditions are varied from cooler and moister to hotter and drier.  The simple model is a one-dimensional (``slab'') atmospheric boundary layer model that simulates the coupled evolution of the daytime surface energy balance and the growth of the daytime boundary layer by convective entrainment of free-tropospheric air.  The comprehensive model is a three-dimensional regional atmospheric model, the Weather Research and Forecasting (WRF) model.  In both models, when soils are dry, the summertime afternoon mixed layer over the Pacific madrone forest is cooler (by ~1-1.5 deg C), moister (by ~1 g/kg), and shallower (by ~200-500 m) than that over the Douglas fir forest.  The near-surface temperature and humidity differences between the species cases, as simulated in WRF, are even larger: over the madrone forest, the air at 2 m above ground is ~1.5-2.5 deg C cooler and ~2-3 g/kg moister than the air at 2 m above ground over the douglas fir forest.  These results suggest that shifts in species composition of Northern California forests could affect the atmospheric boundary layer in the dry season, and these potential effects should be considered in forest management decisions and assessment of regional climate change impacts.
+
 
 \input{ch2-BL/intro/intro.tex}
 
