--- a/ch3-wind/document.tex
+++ b/ch3-wind/document.tex
@@ -1,7 +1,7 @@
 \chapter{Sensitivity of wind forecasts to regional soil moisture: A case study of Northern California's Solano Wind Project site.}
 \label{c.wind}
 
-\textbf{Abstract:}  Soil moisture affects regional-scale atmospheric circulations through its influence on the land surface energy balance, and as such, soil moisture may influence wind energy forecasts.  In this chapter, the sensitivity of wind speed to regional-scale changes in soil moisture is tested for a Northern California wind farm, using the regional atmospheric model WRF.  Three sets of experiments are conducted: in the first, soil moisture in three California regions is set to a dry value and is compared with an all-wet control case; in the second, soil moisture in three California regions is set to a wet value and is compared with an all-dry control case; and in the third, soil moisture in the Coast Range and Sierra Nevada is set to a moderate value, and a range of soil moisture values in the Central Valley are tested.  Winds at Solano are most sensitive to soil moisture changes in the Central Valley region.  When Central Valley soils are very dry, afternoon Solano wind is up to 2.5 m/s faster (1 m/s faster on average) than when Central Valley soils are moderately moist.  The wind speed changes are concentrated in the afternoon (10:00 to 18:00 local time) at Solano, causing the afternoon wind speed ramp-up to shift.  The correlation of horizontal anomalies of pressure with Solano wind shows that Solano wind speed depends most strongly on pressure in the Central Coast (positively correlated) and throughout the Central Valley (negatively correlated), and that decreases in low level (< 300 m) pressure in the Central Valley relative to the Central Coast, caused by increased land surface heating over drier soil, drive wind speed increases at Solano.  The increased pressure gradient when the Central Valley is dry is partially offset by increased negative momentum advection and convective turbulent drag, limiting the wind speed increases.  Errors in weather-model-derived soil moisture of 0.1-0.15 m$^3$/m$^3$, documented in previous analyses [\cite{marshall2003impact}, \cite{godfrey2008soil}], are large enough to alter Solano wind speed forecasts by 1-3 m/s, which can translate to differences in forecasted wind energy of 15-40\% of a wind farm's maximum rated power.
+\textbf{Abstract:}  Soil moisture affects regional-scale atmospheric circulations through its influence on the land surface energy balance; as such, the accuracy of soil moisture inputs to numerical weather models may influence the accuracy of wind energy forecasts.  In this chapter, the sensitivity of wind speed to regional-scale changes in soil moisture is tested for a Northern California wind farm (the Solano Wind Project), using the regional atmospheric model WRF.  Three sets of experiments are conducted: in the first, soil moisture in three California regions is set to a dry value and is compared with an all-wet control case; in the second, soil moisture in three California regions is set to a wet value and is compared with an all-dry control case; and in the third, soil moisture in the Coast Range and Sierra Nevada is set to a moderate value, and a range of soil moisture values in the Central Valley are tested.  Winds at the Solano site are most sensitive to soil moisture changes in the Central Valley region.  When Central Valley soils are very dry, afternoon Solano wind is up to 2.5 m/s faster (1 m/s faster on average) than when Central Valley soils are moderately moist.  The wind speed changes are concentrated in the afternoon (10:00 to 18:00 local time) at Solano, causing the afternoon wind speed ramp-up to shift.  The correlation of horizontal anomalies of pressure with Solano wind shows that Solano wind speed depends most strongly on pressure in the Central Coast (positively correlated) and throughout the Central Valley (negatively correlated), and that decreases in low-level (< 300 m) pressure in the Central Valley relative to the Central Coast, caused by increased land surface heating over drier soil, drive wind speed increases at Solano.  The increased pressure gradient when the Central Valley is dry is partially offset by increased negative momentum advection and convective turbulent drag, limiting the wind speed increases.  Errors in weather-model-derived soil moisture of 0.1-0.15 m$^3$/m$^3$, documented in previous analyses [\cite{marshall2003impact}, \cite{godfrey2008soil}], are large enough to alter Solano wind speed forecasts by 1-3 m/s, which can translate to differences in forecasted wind energy of 15-40\% of a wind farm's maximum rated power.
 
 \input{ch3-wind/tex/intro/intro.tex}
 
