--- a/ch3-wind/tex/discussion/discussion.tex
+++ b/ch3-wind/tex/discussion/discussion.tex
@@ -1,6 +1,7 @@
 %% WIND CHAPTER DISCUSSION
 
 \section{Discussion and Conclusions}
+\label{sec:solano_disc}
 
 Three sets of experiments were conducted to test the sensitivity of Solano Wind Project wind speed to regional soil moisture variations.  In all three experiments, the control soil moisture was set to a constant value throughout the domain (0.1 m$^3$/m$^3$ in experiment 1, 0.25 m$^3$/m$^3$ in experiment 2, and 0.2 m$^3$/m$^3$ in experiment 3).  In experiments 1 and 2, the regional sensitivity was tested by separately perturbing the soil moisture of the Coast Range, Central Valley, and Sierra Nevada regions.  In experiment 3, the scaling of wind changes with incremental changes in Central Valley soil moisture was quantified.
 
@@ -10,7 +11,7 @@ Such changes in speed translate to large changes in power: a moderate speed incr
 
 Understanding the mechanism behind the soil moisture effect lends credence to the reality of this influence in the real world, not just in the model, and helps us anticipate other wind farm locations that might be similarly influenced by soil moisture.  Soil moisture affects Solano wind by controlling land surface heating and thus influencing air temperature through the boundary layer.  Changes in air temperature affect the near-surface pressure gradient that drives the Solano wind.  Solano wind is most sensitive to pressure over the central coastal ocean and in the Central Valley.  Soil moisture in the Central Valley influences Solano wind more strongly than does soil moisture in the Coast Range or in the Sierra Nevada because the Central Valley soil moisture more directly controls the air temperature in the Central Valley regions relevant to the driving pressure gradient.  The changes in pressure gradient and wind are concentrated in the late morning to late afternoon because the changes in land-surface heating and boundary layer air temperature are greatest at these times.  Nevertheless, in the case of a dry Central Valley, the air temperature, pressure gradient, and wind speeds remain slightly elevated even at night.  The marked increases in the pressure gradient are partially offset by negative changes in momentum advection (due to faster transport of lower-momentum air) and friction (due to increased convection), which limit the acceleration of the winds.
 
-This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should include longer model runs covering more synoptic, and ideally more seasonal, conditions.  Also, model ensembles with perturbed forcing should be run to characterize uncertainty due to lateral forcing and model advection.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and only indirectly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [Marjanovic \textit{et al.}, 2014].  However, these model parameters and others need to be chosen carefully to give best performance at a specific site [Wharton \textit{et al.} 2011].
+This study is a prototype, and several caveats and uncertainties bear mentioning.  First, a more complete analysis should include longer model runs covering more synoptic, and ideally more seasonal, conditions.  Also, model ensembles with perturbed forcing should be run to characterize uncertainty due to lateral forcing and model advection.  The specific results are probably sensitive to PBL scheme and model resolution to some degree.  However, the differences due to the PBL scheme are probably a matter of degree rather than of the sign of the changes, since PBL schemes most directly affect vertical mixing and less directly affect lateral transport, which is most relevant to the horizontal pressure gradients controlling wind changes here.  Additionally, we have followed guidelines from previous literature regarding PBL schemes and grid resolution that give good simulation accuracy [\cite{marjanovic2014}].  However, these model parameters and others need to be chosen carefully to give best performance at a specific site [\cite{wharton2011review}].
 
 The model representation of land surface heat and moisture fluxes also contains uncertainties.  We expect the effect of letting soil moisture evolve over the day, rather than holding it fixed at every timestep, to be small, because the changes in soil moisture are small (Figure \ref{fig:windSol_forcings}); moreover, allowing soil moisture to evolve dynamically is comparable to initializing a day-ahead forecast with erroneous soil moisture, in which case soil moisture would also evolve over the day.  The results probably depend strongly on model land use and land cover, which determine albedo, plant transpiration dynamics, and roughness.  Similarly, the results depend on the accuracy of the Noah LSM land cover and soil hydrology parameterizations; Chapter \ref{c.sapflow} of this dissertation illustrates that differences in stomatal dynamics among plant species can change boundary layer air temperature, which the present chapter shows is an important control on the pressure gradients driving near-surface winds.
 
@@ -20,6 +21,6 @@ Soil moisture in California varies both because of interannual variability in pr
 
 More broadly, these results illustrate the sensitivity of winds in this NWP model, WRF, to soil moisture; because NWP models are widely used in wind energy forecasting, the accuracy of soil moisture input information is necessary for accurate energy resource forecasts, at least at sites like Solano.  The effect of soil moisture is expected to be strongest during seasons when local and regional land surface heating drives winds, especially during the warm season with weak to moderate synoptic winds.  In California, these conditions overlap with the season of greatest wind energy production, making soil moisture an important variable in wind energy forecasts.  We also note that, while Solano winds are not strongly sensitive to Coast Range or Sierra Nevada soil moisture, other potential wind farm locations are strongly affected, including the northern and southern Central Valley (cf. Figure \ref{fig:windSol_WindMapsRg}); future development of wind farms in these locations would benefit from measurements to constrain land surface energy fluxes in the Coast Range and Sierra Nevada.
 
-Studies of wind energy sensitivity to regional soil moisture can point to measurements that might improve wind energy forecasts.  Soil moisture itself is difficult to measure at large scales and at the relevant depth [Seneviratne \textit{et al.}, 2010], and small-scale heterogeneity complicates the scaling-up of point measurements.  As such, it may be more feasible and productive to measure a related observable variable, such as land surface temperature (detected remotely from towers or aircraft using thermal imaging) or even the near-surface air pressure difference between the NCV region and the central coast, as proxies for soil moisture and the related land-surface heating.  These measurements could be assimilated into NWP models using land data assimilation frameworks [e.g. Rodell \textit{et al.}, 2004; Drusch, 2007], or they could be integrated into statistical post-processing of NWP model output.  Conducting model sensitivity studies such as this one could help constrain the regions to which the wind forecast at a given site is most sensitive and thus the regions with the greatest potential return on investment in measurement efforts.
+Studies of wind energy sensitivity to regional soil moisture can point to measurements that might improve wind energy forecasts.  Soil moisture itself is difficult to measure at large scales and at the relevant depth [\cite{seneviratne2010investigating}], and small-scale heterogeneity complicates the scaling-up of point measurements.  As such, it may be more feasible and productive to measure a related observable variable, such as land surface temperature (detected remotely from towers or aircraft using thermal imaging) or even the near-surface air pressure difference between the NCV region and the central coast, as proxies for soil moisture and the related land-surface heating.  These measurements could be assimilated into NWP models using land data assimilation frameworks [e.g. \cite{rodell2004global}; \cite{drusch2007initializing}], or they could be integrated into statistical post-processing of NWP model output.  Conducting model sensitivity studies such as this one could help constrain the regions to which the wind forecast at a given site is most sensitive and thus the regions with the greatest potential return on investment in measurement efforts.
 
 %\textit{Close with something here: refer back to motivation of wind variability and utility-scale integration.  Better day-ahead to hour-ahead forecasts could reduce costs, and at many wind farm locations with a land-surface-heating component to driving the wind, improvements in soil moisture input information could help increase the accuracy of those forecasts.  Help utilities manage the variability of wind energy cost-effectively and decrease the cost of wind energy.}
