--- a/ch3-wind/tex/methods/methods.tex
+++ b/ch3-wind/tex/methods/methods.tex
@@ -24,7 +24,7 @@ The sensitivity of Solano wind forecasts to soil moisture is tested using numeri
 
 \subsection{Model setup}
 
-We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  As in Chapter \ref{c.BL}, the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains overlap [\cite{skamarock2008}].  The outer and inner domain are Arakawa-C grids with horizontal resolution of 8.1 km and 2.7 km, respectively; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, echoing the results of \cite{marjanovic2014}, who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and increasing with height, interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to vertical resolution beyond about 40 levels with this vertical interpolation scheme in WRF [\cite{marjanovic2014}, and references therein].
+We run WRF with two nested domains centered on the Solano wind farm (Figure \ref{fig:windSol_domainmap}); the domains are described in Table \ref{table:windSol_domains}.  As in Chapter \ref{c.BL}, two-way grid nesting is used, meaning that the outer grid forces the lateral boundaries of the inner grid, and the inner grid feeds back to the outer grid across the region where the two domains overlap [\cite{skamarock2008}].  The outer and inner domain are Arakawa-C grids with horizontal resolution of 8.1 km and 2.7 km, respectively; preliminary tests with a third finer grid (0.9 km) showed little change in the forecasted winds, echoing the results of \cite{marjanovic2014}, who found little accuracy improvement with horizontal resolution below 2.7 km in their simple terrain case, which had a similar terrain relief to our site.  The domain has 45 vertical levels, with a minimum spacing of $\sim$30 m near the surface and increasing with height, and with the vertical spacing interpolated quadratically by the log of pressure (the default WRF setting); turbine-level (60-100 m) wind forecasts are not very sensitive to further refinement of vertical grid resolution beyond about 40 levels with this vertical grid spacing interpolation scheme in WRF [\cite{marjanovic2014}, and references therein].
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/domain_map_cropped.pdf}
@@ -44,15 +44,15 @@ d02 & 2.7 & 2.7 & 175 & 175 & 45 & 15 & 2 min\\
 \label{table:windSol_domains}
 \end{table}
 
-In WRF, the atmospheric model is coupled to the Noah land surface model with 24-category USGS land use and 16-category soil classifications [\cite{skamarock2008}].  The observed distributions of land use and soil types are used [\cite{eidenshink19941}; \cite{miller1998conterminous}], as are the default vegetation water-use parameters for each land use type [\cite{skamarock2008}], in order to simulate as closely as possible the real present day sensitivity of Solano winds to soil moisture.  Uncertainties associated with errors in the model representation of water movement in the subsurface and plant water use are addressed in the Discussion. 
+In WRF, the atmospheric model is coupled to the Noah land surface model with 24-category USGS land use and 16-category soil classifications [\cite{skamarock2008}].  The observed distributions of land use and soil types are used [\cite{eidenshink19941}; \cite{miller1998conterminous}], as are the default vegetation water-use parameters for each land use type [\cite{skamarock2008}], in order to simulate as closely as possible the real present day sensitivity of Solano winds to soil moisture.  Uncertainties associated with errors in the model representation of water movement in the subsurface and plant water use are addressed in Section \ref{sec:solano_disc}. 
 
 As in Chapter \ref{c.BL}, the ACM2 PBL scheme is used, following the recommendations of \cite{marjanovic2014} for a locally forced simple terrain case in California.  This PBL scheme includes both local (small-scale turbulent) transport, via an eddy diffusivity term between neighboring grid points, and nonlocal (large convective plume) vertical transport, via parametrized exchanged between non-adjacent grid points as a function of buoyant instability; it can thus simulate both stable and unstable conditions [\cite{pleim2007combined}].  The model is forced at the lateral boundaries with NCEP Eta 212 grid (40 km) operational analysis [\cite{ncep}].  Other parameterization schemes and settings are as in Table \ref{table:BL_paramschemes}.  Model variables are output every 30 minutes.
 
-All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak upper-level wind June 27-July 5, and strong upper-level wind July 6-11; Figure \ref{fig:windSol_forcings}), (2) turbine-level wind speeds in this region are highest in the spring and summer [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.
+All experiments are run for the period 2009-06-26 00:00 UTC to 2009-07-11 00:00 UTC, and the first 32 hours are discarded as model spin-up.  This period was chosen for several reasons: (1) it contains a range of synoptic conditions (weak upper-level wind June 27-July 5, and strong upper-level wind July 6-11; Figure \ref{fig:windSol_forcings}), (2) turbine-level wind speeds in this region are highest in the spring and summer [\cite{zhong2004diurnal}; \cite{mansbach2010synoptic}], and (3) the sensitivity to soil moisture is expected to be strongest in the warm season when radiation incident to the land surface is greatest, because changes in the relative partitioning between evapotranspiration and sensible heat flux have the largest absolute magnitude then.  This season (early in the dry season) is also likely to have higher variability in soil moisture than the late dry season, when soils are more uniformly dry.
 
 \subsection{Soil moisture experiments}
 
-We conduct three sets of model experiments, listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the background volumetric soil moisture (model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to a moderately wet value of 0.25, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to a dry value of 0.1.  These test cases are compared with a control case where all land has the moderately wet soil moisture value of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to the dry value of 0.1, and the soil moisture of the test region is set to the moderately wet value of 0.25.  These test cases are compared with a control case where all land has the dry soil moisture value of 0.1.  For reference, climatological soil moisture, using North American Regional Reanalysis (NARR) monthly averaged soil moisture from 1979-2014, is shown in Figure \ref{fig:windSol_NARR_smois}.  A soil moisture value of 0.1 m$^3$/m$^3$  represents an abnormally dry July state for the Coast Range and Sierra Nevada and a moderately dry July state for the Central Valley.  A soil moisture value of 0.25 m$^3$/m$^3$  represents an abnormally wet July state for the Central Valley and southern Coast Range, a moderately wet July state for the northern Coast Range, and a typical July state for the Sierra Nevada.  The NARR soil moisture reanalysis is presented with the caveats that the soil properties (\textit{e.g.} field capacity) may vary between the soil dataset used in NARR and the one used in this study, and that there are known errors in NWP-derived soil moistures [\cite{marshall2003impact}; \cite{godfrey2008soil}].
+We conduct three sets of model experiments, listed in Table \ref{table:windSol_runlist}.  In the first set of experiments, we test the sensitivity of Solano winds to soil moisture in different large-scale regions of California.  In cases dryCR, dryCV, and drySN, the volumetric soil moisture in the non-test regions (WRF model variable SMOIS, m$^3$ water/m$^3$ total volume) is set to a moderately wet value of 0.25 on both grids, and the soil moisture of the test region (respectively, the Coast Range, Central Valley, and Sierra Nevada, shown in Figure \ref{fig:windSol_domainmap}b) is set to a dry value of 0.1 on both grids.  These test cases are compared with a control case where all land has the moderately wet soil moisture value of 0.25.  In cases wetCR, wetCV, and wetSN, the background soil moisture is set to the dry value of 0.1, and the soil moisture of the test region is set to the moderately wet value of 0.25.  These test cases are compared with a control case where all land has the dry soil moisture value of 0.1.  For reference, climatological soil moisture, using North American Regional Reanalysis (NARR) monthly averaged soil moisture from 1979-2014, is shown in Figure \ref{fig:windSol_NARR_smois}.  A soil moisture value of 0.1 m$^3$/m$^3$  represents an abnormally dry July state for the Coast Range and Sierra Nevada and a moderately dry July state for the Central Valley.  A soil moisture value of 0.25 m$^3$/m$^3$  represents an abnormally wet July state for the Central Valley and southern Coast Range, a moderately wet July state for the northern Coast Range, and a typical July state for the Sierra Nevada.  The NARR soil moisture reanalysis is presented with the caveats that the soil properties (\textit{e.g.} field capacity) may vary between the soil dataset used in NARR and the one used in this study, and that there are known errors in NWP-derived soil moistures [\cite{marshall2003impact}; \cite{godfrey2008soil}].
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/NARR_smois_maps_3.png}
@@ -67,7 +67,7 @@ In all cases, the soil moisture is set to the prescribed values at the model sta
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/forcing.png}
-\caption{Model forcing for the experiment 2 cases.  Top panel: wind speed at the Solano lat-lon at 500 hPa.  Middle panel: volumetric soil moisture, averaged over the Central Valley region.  Bottom panel: sensible heat flux at the land surface, averaged over the Central Valley region.}
+\caption{Driving variables output from the experiment 2 cases.  Top panel: wind speed at the Solano lat-lon at 500 hPa.  Middle panel: volumetric soil moisture, averaged over the Central Valley region.  Bottom panel: sensible heat flux at the land surface, averaged over the Central Valley region.}
 \label{fig:windSol_forcings}
 \end{figure}
 
@@ -106,7 +106,7 @@ Experiment & Run name & Background SMOIS (kg/kg) & Perturbed SMOIS region & Pert
 \subsection{Analysis of model output}
 \label{subsec:methods_model_output}
 
-The winds at turbine hub height at the Solano Wind Project are approximated using 60 m above ground level (AGL) winds at the WRF model grid point closest to 38.166N, 121.817W.  The rolling hills at the Solano Wind Project have a terrain height of 40-60 m; thus, the wind at hypothetical 60 m AGL wind turbine hubs at the Solano Wind Project is approximated using wind from 110 m above sea level (ASL).  All times are expressed in local time (Pacific Standard Time).
+The winds at turbine hub height at the Solano Wind Project are approximated using 60 m above ground level (AGL; approximately turbine hub height) winds at the WRF model grid point closest to 38.166N, 121.817W, the center of the Solano Wind Project site.  The rolling hills at the Solano Wind Project have a terrain height of 40-60 m; thus, the wind at hypothetical 60 m AGL wind turbine hubs at the Solano Wind Project is approximated using wind interpolated from the terrain-following coordinates to a constant plane 110 m above sea level (ASL).  All times are expressed in local time (Pacific Standard Time).
 
 Two types of anomalies are analyzed.  The first is the anomaly at each grid point ($i$, $j$), altitude ($z$), and time ($t$), from the horizontal average pressure at that altitude and time ($\widehat{p_{z, t}}$):
 \begin{equation}
