--- a/ch3-wind/tex/results/results.tex
+++ b/ch3-wind/tex/results/results.tex
@@ -163,7 +163,7 @@ Drier Central Valley soils increase Solano winds, while wetter Central Valley so
 
 Next we investigate the physical mechanism by which changes in soil moisture, especially in the Central Valley, influence near-surface winds at Solano.  
 
-The strong diurnal component of the Solano wind (Figures \ref{fig:windSol_TseriesDryRg} and \ref{fig:windSol_TseriesWetRg}) and the wind speed peak at low levels (Figure \ref{fig:windSol_VertProfileDryRg}) suggest significant forcing by land surface heating (consistent with Zhong \textit{et al.} [2004] and Mansbach [2010]).  In order to explore the influence of land surface forcing on terms in the momentum budget, we model the topographically channeled wind at Solano as simple one-dimensional flow through the pass governed by a one-dimensional momentum equation,
+The strong diurnal component of the Solano wind (Figures \ref{fig:windSol_TseriesDryRg} and \ref{fig:windSol_TseriesWetRg}) and the wind speed peak at low levels (Figure \ref{fig:windSol_VertProfileDryRg}) suggest significant forcing by land surface heating (consistent with \cite{zhong2004diurnal} and \cite{mansbach2010synoptic}).  In order to explore the influence of land surface forcing on terms in the momentum budget, we model the topographically channeled wind at Solano as simple one-dimensional flow through the pass governed by a one-dimensional momentum equation,
 
 \begin{equation}
 \frac{\partial u}{\partial t} = -u\frac{\partial u}{\partial x} -\frac{1}{\rho} \frac{\partial p}{\partial x} - F\left(\frac{\partial u}{\partial z}, N\right),
@@ -175,7 +175,7 @@ neglecting the Coriolis term because of the small scale.  The first term on the 
 
 \begin{figure}[here]
 \includegraphics[width=1\textwidth]{ch3-wind/img/corr_wind_panom_lev110_lag12_CA0pt25.png}
-\caption{CA-0.25 case: Solano 60 m AGL (110 m ASL) wind linearly regressed against $\delta p$ at the same altitude, with wind lagging pressure by 6 hours.  Top row: $u$-component of wind; bottom row: $v$-component of wind.  Left column: linear regression slope; right column: correlation coefficient.  Gray boxes outline areas used to calculate pressure gradients; ocean box is ``OCN", northern box in the Central valley is ``NCV", and southern box in Central Valley is ``SCV".}
+\caption{CA-0.25 case: Solano 60 m AGL (110 m ASL) wind linearly regressed against $\delta p$ at the same altitude, with wind lagging pressure by 6 hours.  Top row: $u$-component of wind; bottom row: $v$-component of wind.  Left column: linear regression slope; right column: correlation coefficient.  Gray boxes outline areas used to calculate pressure gradients; ocean box is ``OCN'', northern box in the Central valley is ``NCV'', and southern box in Central Valley is ``SCV''.}
 \label{fig:windSol_CorrMap0pt25}
 \end{figure}
 
@@ -277,7 +277,7 @@ In the dryCV case, the NCV box experiences strong low-level heating beginning in
 
 The momentum advection, pressure gradient, and $u$ time tendency terms in Equation \ref{eqn:windSol_momentum} are estimated from model output for the experiment 2 control (CA-0.25; Figure \ref{fig:windSol_MomTermsDiurn}).  The pressure gradient contribution to the momentum budget is always positive; it increases through the daytime, peaks around 16:00 local time, and declines through the night.  The horizontal advection of momentum almost always contributes negatively to the momentum budget, because advection of slower upstream air from the San Francisco Bay decreases the momentum at the Solano pass.  The advection term is most negative at night, when the wind at Solano is fastest and the wind gradient between Solano and the San Francisco Bay is large. The time tendency ($\frac{\partial u}{\partial t}$) term is much smaller than the pressure gradient term, even in the afternoon when the pressure gradient is largest and negative advection of momentum is small.
 
-Using these three model-derived terms (pressure gradient, advection, and time tendency), we calculate the residual of the momentum budget (Figure  4.20, cyan line), which in Equation \ref{eqn:windSol_momentum} is attributed to the frictional dissipation term, $F\left(\frac{\partial u}{\partial z}, N\right)$. The residual is almost always a negative contribution to the momentum budget, especially during the day.  Moreover, the residual term is not in phase with wind speed, but has the expected diurnal shape of boundary layer turbulence: the residual has large negative values in the daytime when convective turbulence increases eddy viscosity and closely couples winds in the middle and upper boundary layer with the surface momentum sink; and near-zero values at night when thermal stabilization reduces convective turbulence and buffers the middle and upper residual boundary layer from friction with the surface.  We thus speculate that the residual consists largely of the drag from daytime convective turbulence.
+Using these three model-derived terms (pressure gradient, advection, and time tendency), we calculate the residual of the momentum budget (Figure \ref{fig:windSol_MomTermsDiurn}, cyan line), which in Equation \ref{eqn:windSol_momentum} is attributed to the frictional dissipation term, $F\left(\frac{\partial u}{\partial z}, N\right)$. The residual is almost always a negative contribution to the momentum budget, especially during the day.  Moreover, the residual term is not in phase with wind speed, but has the expected diurnal shape of boundary layer turbulence: the residual has large negative values in the daytime when convective turbulence increases eddy viscosity and closely couples winds in the middle and upper boundary layer with the surface momentum sink; and near-zero values at night when thermal stabilization reduces convective turbulence and buffers the middle and upper residual boundary layer from friction with the surface.  We thus speculate that the residual consists largely of the drag from daytime convective turbulence.
 
 This turbulent resistance residual is of comparable magnitude to the pressure gradient and advection terms, and as such is very important for determining the magnitude and phase of the diurnal wind cycle.  In the afternoon in the experiment 2 control case (CA-0.25), the pressure gradient term is large and positive and the negative momentum advection is small.  If the residual term (interpreted as convective turbulent drag) were not also large and negative at this time, the wind would accelerate much faster than is actually observed.  Conversely, high wind speeds persist even after the pressure gradient declines between 22:00 and 04:00 local time and despite the strong advection of lower momentum air.  If the residual term during the night remained at its large negative afternoon  values, the winds would decelerate at night, rather than maintaining high speed as observed.  The decline in magnitude of the turbulent drag term at night is necessary in order to explain the observed strength of nighttime winds.
 
