--- a/setup.tex
+++ b/setup.tex
@@ -1,4 +1,4 @@
-\title{TITLE}
+\title{Forests, Water, and the Atmosphere in Northern California: Insights from Sap-Flow Data Analysis and Numerical Atmospheric Model Simulations}
 \author{Percy Anne Link} % must match BearFacts!
 \degreesemester{Spring}
 \degreeyear{2015}
