--- a/thesis.bib
+++ b/thesis.bib
@@ -307,7 +307,12 @@
 
 %\bibitem[{GLOBE}]{GLOBE}
 %GLOBE Task Team and others (Hastings, D.~A., P.~K. Dunbar, G.~M. Elphingstone, M. Bootz, H. Murakami, H. Maruyama, H. Masaharu, P. Holland, J. Payne, N.~A. Bryant, T.~L. Logan, J.-P. Muller, G. Schreier, and J.~S. MacDonald), eds. (1999), The Global Land One-kilometer Base Elevation (GLOBE) Digital Elevation Model, Version 1.0. National Oceanic and Atmospheric Administration, National Geophysical Data Center, 325 Broadway, Boulder, Colorado 80303, U.S.A. Digital data base on the World Wide Web (URL: http://www.ngdc.noaa.gov/mgg/topo/globe.html) and CD-ROMs.
-
+@techreport{globe,
+	Author = {{GLOBE Task Team} and Hastings, D.~A. and P.~K. Dunbar and G.~M. Elphingstone and M. Bootz and H. Murakami and H. Maruyama and H. Masaharu and P. Holland and J. Payne and N.~A. Bryant and T.~L. Logan and J.-P. Muller and G. Schreier and and J.~S. MacDonald},
+	Institution = {National Oceanic and Atmospheric Administration, National Geophysical Data Center, 325 Broadway, Boulder, Colorado 80303, U.S.A. Digital data base on the World Wide Web (URL: http://www.ngdc.noaa.gov/mgg/topo/globe.html) and CD-ROMs},
+	Title = {The Global Land One-kilometer Base Elevation (GLOBE) Digital Elevation Model, Version 1.0},
+	Year = {1999}}
+	
 @article{granier1987evaluation,
 	Author = {Granier, A.},
 	Journal = {Tree Physiology},
@@ -393,8 +398,8 @@
 	Year = {1980}}
 
 @techreport{lorenz1956empirical,
-	Author = {Lorenz, E.N. and Air Force Cambridge Research Center (US) Geophysics Research Directorate},
-	Institution = {Massachusetts Institute of Technology, Dept. of Meteorology},
+	Author = {Lorenz, E.N.},
+	Institution = {Massachusetts Institute of Technology, Dept. of Meteorology, and Air Force Cambridge Research Center Geophysics Research Directorate},
 	Title = {Empirical orthogonal functions and statistical weather prediction},
 	Year = {1956}}
 
@@ -591,6 +596,15 @@
 	Volume = {362},
 	Year = {2013}}
 
+@article{sivia1996data,
+  title={Data analysis: a Bayesian tutorial},
+  author={Sivia, DS and Skilling, John},
+  journal={AMC},
+  volume={10},
+  pages={12},
+  year={1996}
+}
+
 @article{smith1966variation,
 	Author = {Smith, JHG and Walters, J. and Wellwood, RW},
 	Journal = {Forest Science},
@@ -690,6 +704,12 @@
 
 %\bibitem[{Williams}]{Williams}
 %Williams, C., M. Menne, and J. Lawrimore (2012), Modifications to Pairwise Homogeneity Adjustment software to address coding errors and improve run-time efficiency, NCDC Technical Report NCDC No. GHCNM-12-02, National Climatic Data Center, 28 pp.
+@techreport{williams2012modifications,
+  title={Modifications to Pairwise Homogeneity Adjustment software to address coding errors and improve run-time efficiency},
+  author={Williams, CN and Menne, MJ and Lawrimore, JH},
+  year={2012},
+  institution={NOAA Technical Report NCDC No. GHCNM-12-02}
+}
 
 @article{wilson2002energy,
 	Author = {Wilson, Kell B and Baldocchi, Dennis D and Aubinet, Marc and Berbigier, Paul and Bernhofer, Christian and Dolman, Han and Falge, Eva and Field, Chris and Goldstein, Allen and Granier, Andre and others},
@@ -781,11 +801,32 @@
 	Volume = {20},
 	Year = {2007}}
 
+@article{garratt1990internal,
+  title={The internal boundary layer -- a review},
+  author={Garratt, JR},
+  journal={Boundary-Layer Meteorology},
+  volume={50},
+  number={1-4},
+  pages={171--203},
+  year={1990},
+  publisher={Springer}
+}
+
 @book{garratt1994atmospheric,
   title={The atmospheric boundary layer},
   author={Garratt, John Roy},
   year={1994},
   publisher={Cambridge university press}
+}
+
+@article{harris2010idealized,
+  title={An idealized comparison of one-way and two-way grid nesting},
+  author={Harris, Lucas M and Durran, Dale R},
+  journal={Monthly Weather Review},
+  volume={138},
+  number={6},
+  pages={2174--2187},
+  year={2010}
 }
 
 @article{hirschi2010observational,
@@ -983,6 +1024,14 @@
 	Volume = {17},
 	Year = {2014}}
 
+@article{drusch2007initializing,
+	Author = {Drusch, M},
+	Journal = {Journal of Geophysical Research: Atmospheres},
+	Number = {D3},
+	Title = {Initializing numerical weather prediction models with satellite-derived surface soil moisture: Data assimilation experiments with ECMWF's Integrated Forecast System and the TMI soil moisture data set},
+	Volume = {112},
+	Year = {2007}}
+
 @techreport{eia2014,
 	Author = { {EIA} },
 	Institution = {U.S. Energy Information Administration},
@@ -1172,6 +1221,15 @@
 	Title = {Implementation of a {Model Output Statistics} based on meteorological variable screening for short-term wind power forecast},
 	Volume = {16},
 	Year = {2013}}
+
+@article{rodell2004global,
+	Author = {Rodell, M and Houser, PR and Jambor, U e a1 and Gottschalck, J and Mitchell, K and Meng, CJ and Arsenault, K and Cosgrove, B and Radakovich, J and Bosilovich, M and others},
+	Journal = {Bulletin of the American Meteorological Society},
+	Number = {3},
+	Pages = {381--394},
+	Title = {The global land data assimilation system},
+	Volume = {85},
+	Year = {2004}}
 
 @techreport{skamarock2008,
 	Author = {Skamarock, WC and Klemp, JB and Dudhia, J and Gill, DO and Barker, DM and Duda, MG and Huang, X-Y and Wang, W and Powers, JG},
