--- a/ch1-sapflow/appendix/appendix.tex
+++ b/ch1-sapflow/appendix/appendix.tex
@@ -1,7 +1,7 @@
 \section{Appendix: Markov Chain Monte Carlo}
 \label{sec:sapflow_appendix}
 
-The MCMC method we adopt computes the likelihood function, assuming that the sap flow measurement errors are normally distributed, and uses the Metropolis-Hastings algorithm to select new members of the chain from a proposal distribution [e.g., \textit{Sivia} 2006 XXXX]. We used the python PyMC module to execute this analysis [\cite{patil}]. The standard deviation of the measurement error for each sensor was determined from the noise floor of the sensor's power spectrum, using Parseval's theorem; the standard deviation for most sensors was 1-3\%, and the largest standard deviation was 8\%.  The Metropolis-Hastings algorithm guarantees convergence of the Markov chains, but convergence is slow when a high rate of rejection ($>>$50\%) of the proposed values occurs, a common circumstance for problems with a large number of parameters.  We investigated marginalization over errors in the environmental variables (temperature, relative humidity, radiation, and soil moisture) adopting a single test sensor for which this problem was computational tractable.  The most likely parameter values for this test sensor were slightly different from those derived assuming the environmental parameters are perfectly known, but the differences were small compared to the differences between sensors and compared to the range of the parameter space.  The 95\% confidence intervals did not widen noticeably in this test, but the slight differences in median values suggest that the 95\% confidence intervals quoted here underestimate the parameter uncertainties by up to a factor of 3.  However, all parameter distribution widths remained a small fraction of the spread in most likely parameters values derived for each species as a whole.  Thus, while the confidence intervals listed in Table \ref{tbl:sapflow_mcmc} should be viewed as lower limits to the true error for a given tree's parameters, we do not expect unaccounted-for uncertainties in environmental variables to significantly impact our species-wide conclusions.
+The MCMC method we adopt computes the likelihood function, assuming that the sap flow measurement errors are normally distributed, and uses the Metropolis-Hastings algorithm to select new members of the chain from a proposal distribution [e.g., \cite{sivia1996data}]. We used the python PyMC module to execute this analysis [\cite{patil}]. The standard deviation of the measurement error for each sensor was determined from the noise floor of the sensor's power spectrum, using Parseval's theorem; the standard deviation for most sensors was 1-3\%, and the largest standard deviation was 8\%.  The Metropolis-Hastings algorithm guarantees convergence of the Markov chains, but convergence is slow when a high rate of rejection ($>>$50\%) of the proposed values occurs, a common circumstance for problems with a large number of parameters.  We investigated marginalization over errors in the environmental variables (temperature, relative humidity, radiation, and soil moisture) adopting a single test sensor for which this problem was computational tractable.  The most likely parameter values for this test sensor were slightly different from those derived assuming the environmental parameters are perfectly known, but the differences were small compared to the differences between sensors and compared to the range of the parameter space.  The 95\% confidence intervals did not widen noticeably in this test, but the slight differences in median values suggest that the 95\% confidence intervals quoted here underestimate the parameter uncertainties by up to a factor of 3.  However, all parameter distribution widths remained a small fraction of the spread in most likely parameters values derived for each species as a whole.  Thus, while the confidence intervals listed in Table \ref{tbl:sapflow_mcmc} should be viewed as lower limits to the true error for a given tree's parameters, we do not expect unaccounted-for uncertainties in environmental variables to significantly impact our species-wide conclusions.
 
 \begin{table}
   \caption{Limits of uniform prior distributions for Markov chain Monte Carlo estimation of Jarvis model parameters (Equation \ref{eqn:sapflow_jarvis}.)}
@@ -9,7 +9,12 @@ The MCMC method we adopt computes the likelihood function, assuming that the sap
   \begin{tabular}{l r r}
   \hline
   Parameter & Lower limit & Upper limit \\
-  \hline  $g_{cmax}/\alpha$ (kPa-1) & 0 & 9 \\  $D_o$ (kPa) & 0 & 2 \\  $\beta$ (unitless) & 0 & 400 \\  $\theta_0$ (unitless) & 0 & 0.35 \\  $\gamma$ ((W/m$^2$)$^{-1}$) & 3x10$^{-4}$ & 9x10$^{-4}$ \\
+  \hline
+  $g_{cmax}/\alpha$ (kPa-1) & 0 & 9 \\
+  $D_o$ (kPa) & 0 & 2 \\
+  $\beta$ (unitless) & 0 & 400 \\
+  $\theta_0$ (unitless) & 0 & 0.35 \\
+  $\gamma$ ((W/m$^2$)$^{-1}$) & 3x10$^{-4}$ & 9x10$^{-4}$ \\
   \hline
   \end{tabular}
 \end{table}
