--- a/ch2-BL/discussion/discussion.tex
+++ b/ch2-BL/discussion/discussion.tex
@@ -1,15 +1,15 @@
 \section{Discussion and Conclusions}
 
-Large-scale conversion of the northern California Coast Range forest from all-Douglas-fir to all-Pacific-madrone cools and moistens the summertime boundary layer when relative soil moisture is less than 0.3, a range typical of late summer at the ACRR (Figure \ref{fig:sapflow_met}).   Two atmospheric models, one simple and one complex, simulate a cooling of $\sim$1.5$^\circ$C in the mixed layer ($\sim$2.5$^\circ$C near the surface) and a moistening of 1 g/kg in the mixed layer (2-3 g/kg near the surface).  Pacific madrone cools and moistens the boundary layer when soils are dry because madrone stomatal conductance and thus transpiration remains higher at low soil moisture.  The greater transpiration consumes a larger fraction of net radiation in latent heat and reduces the sensible heat flux; because sensible heat is reduced, there is less direct heating of the boundary layer from the surface, and there is less entrainment of the hotter, drier free tropospheric air above the boundary layer.
+Large-scale conversion of the northern California Coast Range forest from all-Douglas-fir to all-Pacific-madrone cools and moistens the summertime boundary layer when relative soil moisture is less than 0.3, conditions typical of late summer at the ACRR (Figure \ref{fig:sapflow_met}).   Two atmospheric models, one simple and one complex, simulate a cooling of $\sim$1.5$^\circ$C in the mixed layer ($\sim$2.5$^\circ$C near the surface) and a moistening of 1 g/kg in the mixed layer (2-3 g/kg near the surface).  With 100\% Pacific madrone coverage compared with 100\% Douglas fir coverage, Pacific madrone cools and moistens the boundary layer when soils are dry because madrone stomatal conductance and thus transpiration remains higher at low soil moisture.  The greater transpiration consumes a larger fraction of net radiation in latent heat and reduces the sensible heat flux; because sensible heat is reduced, there is less direct heating of the boundary layer from the surface, and there is less entrainment of the hotter, drier free tropospheric air above the boundary layer.
 
-The simple model and the complex model estimate similar magnitudes of temperature and humidity differences between the Douglas fir and Pacific madrone cases; the similarity of the results suggests that they are robust.  The 1-D boundary layer model does not include the effects of advection or subsidence and thus overestimates boundary layer height and temperature at the ACRR field site; however, the differences in temperature and humidity between the Douglas fir and Pacific madrone cases simulated by the simple model agree with the differences simulated by the complex model.  Even accounting for the effects of advection, complex topography, and subsidence in WRF, the hotter and drier conditions of the Douglas fir case relative to the Pacific madrone case are a robust result.
+The simple model and the complex model estimate similar magnitudes of temperature and humidity differences between the Douglas fir and Pacific madrone cases; the similarity of the results confirms the role of evapotranspiration in the near-surface atmosphere in the northern California Coast Range, especially in the dry season.  The 1-D boundary layer model does not include the effects of advection or subsidence and thus overestimates boundary layer height and temperature at the ACRR field site; however, the differences in temperature and humidity between the Douglas fir and Pacific madrone cases simulated by the simple model agree with the differences simulated by the complex model.  Even accounting for the effects of advection, complex topography, and subsidence in WRF, the hotter and drier conditions of the Douglas fir case relative to the Pacific madrone case are a robust result.
 
-The differences in late summer temperature and humidity are due largely to the differences in stomatal response to soil water deficit (Figure \ref{fig:BL_testVPDtheta}).  Importantly, WRF does not represent vegetation-type differences in stomatal response to soil moisture; rather, the $\theta_{ref}$ and $\theta_{wilt}$ parameters depend only on soil type in WRF.  This inability to represent vegetation differences in water stress points prevents WRF from accurately representing the variation in land surface response to drought.
+The differences in late summer temperature and humidity are due largely to the differences in stomatal response to soil water deficit (Figure \ref{fig:BL_testVPDtheta}).  Importantly, WRF does not represent vegetation-type differences in stomatal response to soil moisture; rather, the $\theta_{ref}$ and $\theta_{wilt}$ parameters depend only on soil type in WRF.  This inability to represent vegetation differences in water stress points prevents WRF from accurately representing the variation in land surface response to drought.  Adding vegetation-type-specific $\theta_{ref}$ and $\theta_{wilt}$ parameters to the WRF Noah land surface model would improve WRF's ability to simulate ecosystem-atmosphere interactions.
 
 While we incorporate sap-flow-derived parameters for stomatal response to soil moisture in both models, in the WRF tests we do not use sap-flow-derived parameters for the $VPD$ response.  In order to incorporate sap-flow-derived $VPD$ parameters into WRF in future work, measurements of the sapwood area to leaf area ratio are necessary (for converting $g_{s,max}$, representing conductance on a per-sapwood-area basis, to $1/RS$, representing stomatal conductance on a per-leaf-area basis).  The sap-flow-based $VPD$ parameters should also be re-estimated using $\Delta q$ instead of $VPD$, in accord with the WRF humidity stress function (Equation \ref{eqn:BL_WRFq}).  Nevertheless, the effect of differences in $VPD$ parameters is small when $VPD$ is high and soil is dry, as is the case in mid- to late-summer (Figure \ref{fig:BL_testVPDtheta}).  The effect of differences in $VPD$ parameters may be larger when soil is wet and $VPD$ is low to moderate, as in winter and spring; simulations of those conditions would require more accurate estimation of species-specific $VPD$ parameters.
 
 Using sap flow measurements to parameterize a regional climate model requires a significant scale jump, from the scale of whole trees and a single hillslope, to the scale of 2.7 km grid boxes and a 500 km x 500 km domain.  Such scale jumps are inherent in the measurement of evapotranspiration; however, further sap flow measurements of these species on slopes with different aspects, elevations, and species mixes are needed in order better to quantify the variability in stomatal response parameters and covariation with other environmental conditions.
 
-The regional cases tested here are extreme scenarios involving the total conversion of the forest from one species (Douglas fir) to the other (Pacific madrone).  However, this may not be wholly unrealistic: Pacific madrones were likely more abundant in the past, due to regular controlled burning by indigenous people [\cite{johnsonACRR}].  It is possible that longer and more severe droughts in a warmer future climate could cause a shift of from Douglas fir to Pacific madrone, if fires become more frequent and if Douglas firs are less tolerant of drought.  Moreover, forest management stakeholders are actively discussing controlling the encroachment of Douglas fir in this region [William Dietrich, personal communication]. This study demonstrates that such regional-scale species shifts could have regional-scale impacts on air temperature and humidity in the dry season.
+The regional cases tested here are extreme scenarios involving the total conversion of the forest from one species (Douglas fir) to the other (Pacific madrone).  However, this may not be wholly unrealistic: Pacific madrones were likely more abundant in the past, due to regular controlled burning by indigenous people [\cite{johnsonACRR}].  It is possible that longer and more severe droughts in a warmer future climate could cause a shift from Douglas fir to Pacific madrone, if fires become more frequent and if Douglas firs are less tolerant of drought.  Moreover, forest management stakeholders are actively discussing controlling the encroachment of Douglas fir in this region [William Dietrich, personal communication]. This study demonstrates that such regional-scale species shifts could have regional-scale impacts on air temperature and humidity in the dry season.
 
-In this study, we integrate tree-scale field observations with physical atmospheric models to test regional atmospheric feedbacks of species-specific stomatal behavior.  We demonstrate the sensitivity of the boundary layer to stomatal dynamics and show that a regional-scale change in dominant evergreen tree species can change summertime near-surface temperatures by $\sim$2$^\circ$C.  This result underscores the importance of understanding species- and vegetation-type-differences in stomatal response to soil moisture and $VPD$.
+In this study, we integrate tree-scale field observations with physical atmospheric models to test regional atmospheric feedbacks of species-specific stomatal behavior.  We demonstrate the sensitivity of the boundary layer to stomatal dynamics and show that a regional-scale change in dominant evergreen tree species can change summertime afternoon near-surface temperatures by $\sim$2$^\circ$C.  This result underscores the importance of understanding species- and vegetation-type-differences in stomatal response to soil moisture and $VPD$.
