--- a/ch2-BL/intro/intro.tex
+++ b/ch2-BL/intro/intro.tex
@@ -1,11 +1,11 @@
 \section{Introduction}
 
-Because Douglas fir and Pacific madrone respond differently to atmospheric evaporative demand and soil moisture, these two tree species transpire maximally in different seasons in Northern California, with Douglas fir peaking in spring and Pacific madrone peaking in mid-late summer.  These differences in seasonal water flux may cause the summertime energy partitioning at the land surface to differ between a Douglas-fir-dominated landscape and a Pacific-madrone-dominated landscape.  In this chapter, we use two atmospheric models, one simple and one complex, to estimate the effect of surface energy partitioning differences on atmospheric boundary layer temperature, depth, and humidity, in the hypothetical cases of a northern California Coast Range completely dominated by either Douglas fir or Pacific madrone.
+Because Douglas fir and Pacific madrone respond differently to atmospheric evaporative demand and soil moisture, these two tree species transpire maximally in different seasons in Northern California, with Douglas fir peaking in spring and Pacific madrone peaking in mid-late summer.  These differences in seasonal water flux may cause the summertime energy partitioning at the land surface to differ between a Douglas-fir-dominated landscape and a Pacific-madrone-dominated landscape.  In this chapter, we use two atmospheric models, one simple and one comprehensive, to estimate the effect of surface energy partitioning differences on atmospheric boundary layer temperature, depth, and humidity, in the hypothetical cases of a northern California Coast Range completely dominated by either Douglas fir or Pacific madrone.
 
-The land surface influences the temperature and humidity of the atmospheric boundary layer by several mechanisms, including albedo, surface roughness, and stomatal control of evaporative cooling [\cite{bonan}].  Net radiation absorbed by the land surface is partitioned into sensible heat and evapotranspiration (``latent heat''); sensible heat directly warms the atmospheric boundary layer, while latent heat moistens the atmospheric boundary layer but does not increase its temperature if no condensation occurs.  Increased evapotranspiration leads to a cooler, moister, shallower boundary layer, while suppressed evapotranspiration leads to a hotter, drier, deeper boundary layer [\cite{bonan}; \cite{seneviratne2010investigating}; \cite{de2012modelled}; \cite{fischer2007soil}; \cite{lobell2008effect}; \cite{mueller2012hot}; \cite{durre2000dependence}; \cite{hirschi2010observational}; \cite{Lee:2005kx}].  
+The land surface influences the temperature and humidity of the atmospheric boundary layer by several mechanisms, including albedo, surface roughness, and stomatal control of evaporative cooling [\cite{bonan}].  Net radiation absorbed by the land surface is partitioned into sensible heat and evapotranspiration.  With evapotranspiration, the conversion of liquid water to water vapor consumes energy (called ``latent heat''), thus cooling the land surface; evapotranspiration thus moistens the atmospheric boundary layer but does not increase its temperature if no condensation occurs.  Sensible heat, in contrast, directly warms the atmospheric boundary layer; sensible heat is proportional to the temperature difference between the ground and the near-surface air, so the heating depends on the land surface temperature.  Increased evapotranspiration leads to a cooler, moister, shallower boundary layer, while suppressed evapotranspiration leads to a hotter, drier, deeper boundary layer [\cite{bonan}; \cite{seneviratne2010investigating}; \cite{de2012modelled}; \cite{fischer2007soil}; \cite{lobell2008effect}; \cite{mueller2012hot}; \cite{durre2000dependence}; \cite{hirschi2010observational}; \cite{Lee:2005kx}].  
 
 In forested regions during rain-free periods, the evapotranspiration flux is dominated by transpiration [\cite{wilson2001comparison}, \cite{dirmeyer2005second}, \cite{jasechko2013terrestrial}] and thus depends strongly on active stomatal control.  Stomata respond to multiple environmental variables, including root-zone water availability, atmospheric evaporative demand (measured by vapor pressure $VPD$, kPa, equal to the difference between saturation vapor pressure at air temperature and actual vapor pressure), photosynthetically active radiation, CO$_2$ concentration, and temperature [\cite{jarvis1976interpretation}; \cite{collatz1991physiological}].  Seasonal or anomalous drought most strongly affects root-zone water availability and $VPD$.  Root-zone water supply exerts nonlinear control on stomatal conductance ($g_s$, L/day/kPa), with $g_s$ insensitive at high water content but declining nearly linearly below a threshold water content until a minimum water content is reached [\cite{feddes}; \cite{chen2008observations}]; the threshold and minimum water contents vary among species [Chapter \ref{c.sapflow} and references therein].  Stomatal conductance $g_s$ declines with increasing $VPD$, also nonlinearly, and species with higher $g_s$ at low $VPD$ show more rapid decline of $g_s$ with increasing $VPD$ [\cite{oren1999survey}].
 
 Vegetation types with low stomatal conductance can create a hotter, deeper, and drier atmospheric boundary layer.  In boreal forests in summer, needleleaf trees have more conservative stomatal behavior than do broadleaf trees, resulting in lower evapotranspiration, increased sensible heat flux, and higher boundary layer temperature and depth and lower humidity [\cite{baldocchi2000climate}; \cite{liu2005changes}].  Similarly, in the Southeastern US under dry soil conditions, a pine plantation restricted stomatal conductance to a greater degree than did a nearby hardwood site, resulting in greater sensible heat flux and a deeper atmospheric boundary layer [\cite{Juang:2007ve}].  In temperate Europe, as well, forest and grassland transpiration respond differently to $VPD$: early in the heat wave of 2003 (before depletion of soil moisture), forest sites had lower evapotranspiration and greater sensible heat flux than did grassland sites, due at least in part to greater stomatal closure in forests in response to high $VPD$ [\cite{teuling2010contrasting}].  The differences between plant types in partitioning between latent and sensible heat are an important source of uncertainty in modeled land-atmosphere interactions [\cite{bonan}; \cite{de2012determining}].
 
-In this chapter, we quantify the effect of species differences in stomatal environmental response on near-surface air temperature, humidity, and boundary layer depth.  We estimate changes in the atmospheric boundary layer between two hypothetical northern California Coast Range forests: one composed entirely of Douglas fir, and the other composed entirely of Pacific madrone.  As shown in Chapter \ref{c.sapflow}, Douglas fir $g_s$ starts to decline at a higher soil moisture content than does Pacific madrone $g_s$.  Additionally, Douglas-fir $g_s$ is high when $VPD$ is low but declines rapidly with increasing $VPD$, whereas Pacific madrone $g_s$ is moderate at low $VPD$ but declines less rapidly with increasing $VPD$.  We use both a simple atmospheric boundary layer model and a complex regional climate model to scale up sap-flow-based observations of the two species's stomatal response to $VPD$ and soil moisture.  By testing extreme scenarios of regional conversion of Northern California forests to all-Douglas-fir or all-Pacific madrone, we estimate the potential differences in atmospheric temperature and humidity resulting from their different stomatal dynamics.
+In this chapter, we quantify the effect of species differences in stomatal environmental response on near-surface air temperature, humidity, and boundary layer depth.  We estimate changes in the atmospheric boundary layer between two hypothetical northern California Coast Range forests: one composed entirely of Douglas fir, and the other composed entirely of Pacific madrone.  We choose these two species because of their strongly contrasting responses to water stress.  As shown in Chapter \ref{c.sapflow}, Douglas fir $g_s$ starts to decline at a higher soil moisture content than does Pacific madrone $g_s$.  Additionally, Douglas-fir $g_s$ is high when $VPD$ is low but declines rapidly with increasing $VPD$, whereas Pacific madrone $g_s$ is moderate at low $VPD$ but declines less rapidly with increasing $VPD$.  We use both a simple atmospheric boundary layer model and a comprehensive regional climate model to scale up sap-flow-based observations of the two species's stomatal response to $VPD$ and soil moisture.  By testing extreme scenarios of regional conversion of Northern California forests to all-Douglas-fir or all-Pacific madrone, we estimate the potential differences in atmospheric temperature and humidity resulting from their different stomatal dynamics.
